# nn-zero-to-hero

./: .gitignore  AGENTS.md  pyproject.toml
lectures/makemore/: makemore_part1_exercises.ipynb  makemore_part2_exercises.ipynb  makemore_part3_exercises.ipynb
