[project]
name = "nn-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "lightning>=2.5.5",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
    "optuna-integration[pytorch-lightning]>=4.5.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
]
